--- a/Frontend/app/src/main/res/layout/card_product_userlobby.xml
+++ b/Frontend/app/src/main/res/layout/card_product_userlobby.xml
@@ -48,10 +48,24 @@
         android:id="@+id/viewIndicator"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="36dp"
         android:background="@drawable/shape_circle"
         app:layout_constraintBottom_toBottomOf="@+id/textViewProductName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewProductName" />
+
+    <TextView
+        android:id="@+id/tvNombreAgricultor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.783" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
