+ Obtencion de los pedidos v1 +implementacion del cambio de estado del pedido

--- a/Frontend/app/src/main/res/layout/card_order_seller.xml
+++ b/Frontend/app/src/main/res/layout/card_order_seller.xml
@@ -51,5 +51,19 @@
         app:layout_constraintStart_toStartOf="@+id/textViewProductName"
         app:layout_constraintTop_toBottomOf="@+id/textViewProductName"
         tools:text="Oriol Estero Sanchez" />
+
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        tools:text="Estado: Aceptado"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewProductName"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
