Cambio de icono segun la disposicion de los pedidos ademas de cofiguracion del token para las llamadas al servidor

--- a/Frontend/app/src/main/res/layout/menu_icon_basket.xml
+++ b/Frontend/app/src/main/res/layout/menu_icon_basket.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menu_icon_basket"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -6,19 +7,20 @@
 
     <ImageView
         android:id="@+id/iconoMenu"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
         android:src="@drawable/shopping_basket_18" />
 
     <TextView
         android:id="@+id/contadorPedidos"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_gravity="bottom|end"
         android:background="@drawable/round_notify"
         android:gravity="center"
         android:padding="4dp"
-        android:text="99+"
+        android:text="!"
+        android:textStyle="bold"
         android:textColor="#FFFFFF"
         android:textSize="9sp" />
 </FrameLayout>
