--- a/Frontend/app/src/main/res/menu/menu_nav_agricultor.xml
+++ b/Frontend/app/src/main/res/menu/menu_nav_agricultor.xml
@@ -4,11 +4,18 @@
 
 
     <item
+        android:id="@+id/back"
+        android:icon="@drawable/back_foreground"
+        android:title="Item"
+
+        app:showAsAction="always" />
+    <item
         android:id="@+id/carrito"
         android:icon="@drawable/shopping_basket_18"
         android:title="Item"
 
         app:showAsAction="always" />
+
     <item
         android:id="@+id/nav_profile2"
         android:icon="@drawable/back_background"
